--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -13,8 +13,15 @@
   <table>
     {% for item in items %}
     <tr>
-      <td>{{ item.name }}</td>
-      <td>{{ item.done }}</td>
+      {% if item.done %}
+      <td><strike>{{ item.name }}</strike></td>
+      {% else %}
+      {{ item.name }}
+      {% endif %}
+    </tr>
+    {% empty %}
+    <tr>
+      <td>You have nothing to do</td>
     </tr>
     {% endfor %}
   </table>
