--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -16,8 +16,13 @@
       {% if item.done %}
       <td><strike>{{ item.name }}</strike></td>
       {% else %}
-      {{ item.name }}
+      <td>{{ item.name }}</td>
       {% endif %}
+      <td>
+        <a href="/edit/{{ item.id }}">
+          <button>Edit</button>
+        </a>
+      </td>
     </tr>
     {% empty %}
     <tr>
